// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationForm form validation works for core instance: location Tags does not have error message 1`] = `"Unit group Enter a location group name"`;

exports[`LocationForm form validation works for eusm instance: location Tags does not have error message 1`] = `"Unit group Enter a location group name"`;

exports[`LocationForm is able to edit a location unit: field input 1`] = `
<input
  className="ant-input"
  disabled={false}
  id="location-form_extraFields_0_Sample Key"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value=""
/>
`;

exports[`LocationForm is able to edit a location unit: field input 2`] = `
<input
  className="ant-input"
  disabled={false}
  id="location-form_extraFields_1_Area Nick name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value=""
/>
`;

exports[`LocationForm is able to edit a location unit: field input 3`] = `
<input
  className="ant-input"
  disabled={false}
  id="location-form_extraFields_2_Sample Key Two"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value=""
/>
`;

exports[`LocationForm is able to edit a location unit: field input 4`] = `
<input
  className="ant-input"
  disabled={false}
  id="location-form_extraFields_3_Area code"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value=""
/>
`;

exports[`LocationForm is able to edit a location unit: field label 1`] = `
<label
  className=""
  htmlFor="location-form_extraFields_0_Sample Key"
  title="Sample Key"
>
  Sample Key
</label>
`;

exports[`LocationForm is able to edit a location unit: field label 2`] = `
<label
  className=""
  htmlFor="location-form_extraFields_1_Area Nick name"
  title="Area Nick name"
>
  Area Nick name
</label>
`;

exports[`LocationForm is able to edit a location unit: field label 3`] = `
<label
  className=""
  htmlFor="location-form_extraFields_2_Sample Key Two"
  title="Sample Key Two"
>
  Sample Key Two
</label>
`;

exports[`LocationForm is able to edit a location unit: field label 4`] = `
<label
  className=""
  htmlFor="location-form_extraFields_3_Area code"
  title="Area code"
>
  Area code
</label>
`;

exports[`LocationForm renders correctly: cancel button 1`] = `
<button
  className="ant-btn"
  id="location-form-cancel-button"
  onClick={[Function]}
  type="button"
>
  <LoadingIcon
    existIcon={false}
    loading={false}
    prefixCls="ant-btn"
  >
    <CSSMotion
      motionName="ant-btn-loading-icon-motion"
      onAppearActive={[Function]}
      onAppearStart={[Function]}
      onEnterActive={[Function]}
      onEnterStart={[Function]}
      onLeaveActive={[Function]}
      onLeaveStart={[Function]}
      removeOnLeave={true}
      visible={false}
    >
      <DomWrapper />
    </CSSMotion>
  </LoadingIcon>
  <span
    key=".0"
  >
    Cancel
  </span>
</button>
`;

exports[`LocationForm renders correctly: externalId field 1`] = `
<input
  className="ant-input"
  disabled={false}
  id="location-form_externalId"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="Select status"
  type="text"
  value=""
/>
`;

exports[`LocationForm renders correctly: externalId label 1`] = `
<label
  className=""
  htmlFor="location-form_externalId"
  title="External ID"
>
  External ID
</label>
`;

exports[`LocationForm renders correctly: geometry field 1`] = `
<textarea
  className="ant-input"
  disabled={false}
  id="location-form_geometry"
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder="</> JSON"
  rows={4}
  style={Object {}}
  value=""
/>
`;

exports[`LocationForm renders correctly: geometry label 1`] = `
<label
  className=""
  htmlFor="location-form_geometry"
  title="Geometry"
>
  Geometry
</label>
`;

exports[`LocationForm renders correctly: instance field 1`] = `
<input
  className="ant-input ant-input-disabled"
  disabled={true}
  id="location-form_instance"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value="core"
/>
`;

exports[`LocationForm renders correctly: instance label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="location-form_instance"
  title="Instance"
>
  Instance
</label>
`;

exports[`LocationForm renders correctly: isJurisdiction field 1`] = `
Array [
  <input
    checked={false}
    className="ant-radio-input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value={false}
  />,
  <input
    checked={true}
    className="ant-radio-input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value={true}
  />,
]
`;

exports[`LocationForm renders correctly: isJurisdiction label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="location-form_isJurisdiction"
  title="Location category"
>
  Location category
</label>
`;

exports[`LocationForm renders correctly: latitude field 1`] = `
<input
  className="ant-input"
  disabled={false}
  id="location-form_latitude"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="E.g. -16.08306"
  type="text"
  value=""
/>
`;

exports[`LocationForm renders correctly: latitude label 1`] = `
<label
  className=""
  htmlFor="location-form_latitude"
  title="Latitude"
>
  Latitude
</label>
`;

exports[`LocationForm renders correctly: locationTags field 1`] = `
<input
  aria-activedescendant="location-form_locationTags_list_0"
  aria-autocomplete="list"
  aria-controls="location-form_locationTags_list"
  aria-haspopup="listbox"
  aria-owns="location-form_locationTags_list"
  autoComplete="off"
  className="ant-select-selection-search-input"
  disabled={false}
  id="location-form_locationTags"
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onPaste={[Function]}
  readOnly={true}
  role="combobox"
  style={
    Object {
      "opacity": 0,
    }
  }
  type="search"
  unselectable="on"
  value=""
/>
`;

exports[`LocationForm renders correctly: locationTags label 1`] = `
<label
  className=""
  htmlFor="location-form_locationTags"
  title="Unit group"
>
  Unit group
</label>
`;

exports[`LocationForm renders correctly: longitude field 1`] = `
<input
  className="ant-input"
  disabled={false}
  id="location-form_longitude"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="E.g. 49.54933"
  type="text"
  value=""
/>
`;

exports[`LocationForm renders correctly: longitude label 1`] = `
<label
  className=""
  htmlFor="location-form_longitude"
  title="Longitude"
>
  Longitude
</label>
`;

exports[`LocationForm renders correctly: name field 1`] = `
<input
  className="ant-input"
  disabled={false}
  id="location-form_name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="Enter a location name"
  type="text"
  value=""
/>
`;

exports[`LocationForm renders correctly: name label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="location-form_name"
  title="Name"
>
  Name
</label>
`;

exports[`LocationForm renders correctly: parentId field 1`] = `null`;

exports[`LocationForm renders correctly: parentId label 1`] = `
<label
  className=""
  htmlFor="location-form_parentId"
  title="Parent"
>
  Parent
</label>
`;

exports[`LocationForm renders correctly: serviceType field 1`] = `
<input
  aria-activedescendant="location-form_serviceType_list_0"
  aria-autocomplete="list"
  aria-controls="location-form_serviceType_list"
  aria-haspopup="listbox"
  aria-owns="location-form_serviceType_list"
  autoComplete="off"
  className="ant-select-selection-search-input"
  disabled={false}
  id="location-form_serviceType"
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onPaste={[Function]}
  readOnly={true}
  role="combobox"
  style={
    Object {
      "opacity": 0,
    }
  }
  type="search"
  unselectable="on"
  value=""
/>
`;

exports[`LocationForm renders correctly: serviceType label 1`] = `
<label
  className=""
  htmlFor="location-form_serviceType"
  title="Type"
>
  Type
</label>
`;

exports[`LocationForm renders correctly: status field 1`] = `
Array [
  <input
    checked={true}
    className="ant-radio-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value="Active"
  />,
  <input
    checked={false}
    className="ant-radio-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value="InActive"
  />,
]
`;

exports[`LocationForm renders correctly: status label 1`] = `
<label
  className="ant-form-item-required"
  htmlFor="location-form_status"
  title="Status"
>
  Status
</label>
`;

exports[`LocationForm renders correctly: submit button 1`] = `
<button
  className="ant-btn ant-btn-primary"
  disabled={false}
  id="location-form-submit-button"
  onClick={[Function]}
  type="submit"
>
  <LoadingIcon
    existIcon={false}
    loading={false}
    prefixCls="ant-btn"
  >
    <CSSMotion
      motionName="ant-btn-loading-icon-motion"
      onAppearActive={[Function]}
      onAppearStart={[Function]}
      onEnterActive={[Function]}
      onEnterStart={[Function]}
      onLeaveActive={[Function]}
      onLeaveStart={[Function]}
      removeOnLeave={true}
      visible={false}
    >
      <DomWrapper />
    </CSSMotion>
  </LoadingIcon>
  <span
    key=".0"
  >
    Save
  </span>
</button>
`;
